# emcppbase

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  justfile
cmake/: c-utils.cmake  toolchain-arm-none-eabi.cmake
embase-arduino/: CMakeLists.txt
embase-arduino/inc/: Arduino.h  Print.h  SPI.h  SoftwareSPI.h  atomic.h
embase-arduino/src/: Arduino.cpp  Print.cpp  SoftwareSPI.cpp
embase-arduino/src/utility/: spi_com.c
embase-core/: .gitignore  CMakeLists.txt
embase-core/inc/: embase_buffer.h  embase_codec.h  embase_config.h.in  embase_def.h  embase_log.h  embase_macros.h  embase_platform.h  embase_task.h  embase_types.h
embase-core/src/: embase_codec.cpp  embase_log.cpp  embase_platform.cpp
embase-core/src/platform/posix/: embase_thread-pthread.cpp  port-posix.cpp
embase-core/test/: CMakeLists.txt  test-buffer.cpp  test-task.cpp
embase-hw/: CMakeLists.txt
embase-hw/inc/hw/: ScreenSt7525.h
embase-hw/src/: Device.cpp  Screen.cpp  ScreenSsd1283.cpp  ScreenSt7525.cpp  SwSpi.cpp  SwSpi.h
examples/: CMakeLists.txt  example-enum.cpp  example-log.cpp  example-string.cpp  example-thread.cpp
examples/hw/ScreeSt7525-stm32g030/: .gitignore  CMakeLists.txt  Makefile  Makefile.bak  STM32G030C8T6.ioc  STM32G030C8Tx_FLASH.ld
examples/hw/ScreeSt7525-stm32g030/Core/Inc/: iwdg.h  main.h  rtc.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h  tim.h  usart.h
examples/hw/ScreeSt7525-stm32g030/Core/Src/: dma.c  gpio.c  iwdg.c  main.c  rtc.c  stm32g0xx_it.c  tim.c  usart.c
examples/hw/ScreeSt7525-stm32g030/Drivers/CMSIS/Device/ST/STM32G0xx/Include/: stm32g041xx.h
examples/hw/ScreeSt7525-stm32g030/app/: app_entry.cpp  app_entry.h
examples/hw/ScreenSsd1283-esp32/: CMakeLists.txt  build.sh
examples/hw/ScreenSsd1283-esp32/main/: CMakeLists.txt  crc.c  crc.h  main.cpp
examples/uart-screen-host/: main.cpp  nypack.h
include/: embase_config.h.in  embase_def.h  embase_log.h  embase_macros.h  embase_macros_bits.h  embase_platform.h  embase_string.h  embase_task.h  embase_thread.h  embase_utils.h
include/hw/: Device.h  Screen.h  ScreenSsd1283.h  Uart.h
include/hw/linux/: ScreenFb-linux.h
libs/async.h/async/: async.h
openocd/: jlink-swd.cfg
src/: CMakeLists.txt  embase_log.cpp  embase_string.cpp  embase_thread-pthread.cpp
src/hw/: Screen.cpp  ScreenSsd1283.cpp
src/hw/linux/: ScreenFb-linux.cpp
src/platform/freertos/: embase_thread-freertos.cpp  port-freertos.cpp
